# Django-Boilerplate

./: .gitignore  pyproject.toml
server/apps/common/: utils.py
server/apps/common/mixins/: admin.py  managers.py  models.py  views.py
server/apps/common/tests/: test_models.py  test_utils.py
server/apps/users/: admin.py  backends.py  managers.py  models.py
server/apps/users/api/: serializers.py  urls.py  views.py
server/apps/users/migrations/: 0001_initial.py  0002_remove_user_username.py
server/apps/users/tests/: test_managers.py  test_models.py
server/server/: example.env  permissions.py  settings.py  urls.py  yasg.py
server/server/logging/: base.py  middleware.py
