[tool.poetry]
name = "django boilerplate"
version = "0.1.0"
description = "My boilerplate for django projects"
authors = ["Madjar Ivan <evanmadjar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
